specs/001-typescript-to-zig-native/examples/valid/void-function.ts
function ready(): void {
  console.log("ready");
}

ready();
