specs/001-typescript-to-zig-native/examples/invalid/import-cycle-a.ts
import b from "./import-cycle-b.ts";

console.log(b(1));
